<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/blogFragment"
        android:icon="@drawable/ic_blog"
        android:title="@string/title_blog" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />
    <item
        android:id="@+id/projectFragment"
        android:icon="@drawable/ic_project"
        android:title="@string/title_project" />
    <item
        android:id="@+id/mineFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_mine" />
</menu>